--- a/.gitignore
+++ b/.gitignore
@@ -235,3 +235,8 @@ report/NWU_TEMPLATE.out
 report/NWU_TEMPLATE.synctex.gz
 report/NWU_TEMPLATE.toc
 *.pdf
+report/NWU_TEMPLATE.pdf
+*.lof
+report/NWU_TEMPLATE.lof
+report/NWU_TEMPLATE.aux
+report/NWU_TEMPLATE.synctex.gz
